tests/base/parser/bad/lib/lmodule-library-cid-type-with.scillib
scilla_version 0

library TestLib

(* Missing 'House' *)

type of
| Kind of String
